// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SuggestionList /> should not update while suggestions are fetching 1`] = `
<SuggestionList
  bottomHeight={10}
  fetching={false}
  onClick={[Function]}
  suggestions={
    Array [
      "foo",
      "foo bar",
      "foo bar buz",
      "foo bar buz quz",
    ]
  }
>
  <SurroundPortals
    portalName="search.suggestions"
    portalProps={
      Object {
        "onClick": [Function],
        "suggestions": Array [
          "foo",
          "foo bar",
          "foo bar buz",
          "foo bar buz quz",
        ],
      }
    }
  >
    <div
      className="css-7w6rep css-90ryaa"
    >
      <SurroundPortals
        key="foo"
        portalName="search.suggestion-item"
        portalProps={
          Object {
            "className": "css-crua9x",
            "onClick": [Function],
            "suggestion": "foo",
          }
        }
      >
        <button
          className="css-crua9x"
          data-test-id="searchSuggestion foo"
          onClick={[Function]}
          type="button"
          value="foo"
        >
          <SurroundPortals
            portalName="search.suggestion-item-content"
            portalProps={
              Object {
                "suggestion": "foo",
              }
            }
          >
            foo
          </SurroundPortals>
        </button>
      </SurroundPortals>
      <SurroundPortals
        key="foo bar"
        portalName="search.suggestion-item"
        portalProps={
          Object {
            "className": "css-crua9x",
            "onClick": [Function],
            "suggestion": "foo bar",
          }
        }
      >
        <button
          className="css-crua9x"
          data-test-id="searchSuggestion foo bar"
          onClick={[Function]}
          type="button"
          value="foo bar"
        >
          <SurroundPortals
            portalName="search.suggestion-item-content"
            portalProps={
              Object {
                "suggestion": "foo bar",
              }
            }
          >
            foo bar
          </SurroundPortals>
        </button>
      </SurroundPortals>
      <SurroundPortals
        key="foo bar buz"
        portalName="search.suggestion-item"
        portalProps={
          Object {
            "className": "css-crua9x",
            "onClick": [Function],
            "suggestion": "foo bar buz",
          }
        }
      >
        <button
          className="css-crua9x"
          data-test-id="searchSuggestion foo bar buz"
          onClick={[Function]}
          type="button"
          value="foo bar buz"
        >
          <SurroundPortals
            portalName="search.suggestion-item-content"
            portalProps={
              Object {
                "suggestion": "foo bar buz",
              }
            }
          >
            foo bar buz
          </SurroundPortals>
        </button>
      </SurroundPortals>
      <SurroundPortals
        key="foo bar buz quz"
        portalName="search.suggestion-item"
        portalProps={
          Object {
            "className": "css-crua9x",
            "onClick": [Function],
            "suggestion": "foo bar buz quz",
          }
        }
      >
        <button
          className="css-crua9x"
          data-test-id="searchSuggestion foo bar buz quz"
          onClick={[Function]}
          type="button"
          value="foo bar buz quz"
        >
          <SurroundPortals
            portalName="search.suggestion-item-content"
            portalProps={
              Object {
                "suggestion": "foo bar buz quz",
              }
            }
          >
            foo bar buz quz
          </SurroundPortals>
        </button>
      </SurroundPortals>
    </div>
  </SurroundPortals>
</SuggestionList>
`;

exports[`<SuggestionList /> should not update while suggestions are fetching 2`] = `
<SuggestionList
  bottomHeight={10}
  fetching={true}
  onClick={[Function]}
  suggestions={
    Array [
      "foo bar buz quz",
      "foo bar buz",
      "foo bar",
      "foo",
    ]
  }
>
  <SurroundPortals
    portalName="search.suggestions"
    portalProps={
      Object {
        "onClick": [Function],
        "suggestions": Array [
          "foo",
          "foo bar",
          "foo bar buz",
          "foo bar buz quz",
        ],
      }
    }
  >
    <div
      className="css-7w6rep css-90ryaa"
    >
      <SurroundPortals
        key="foo"
        portalName="search.suggestion-item"
        portalProps={
          Object {
            "className": "css-crua9x",
            "onClick": [Function],
            "suggestion": "foo",
          }
        }
      >
        <button
          className="css-crua9x"
          data-test-id="searchSuggestion foo"
          onClick={[Function]}
          type="button"
          value="foo"
        >
          <SurroundPortals
            portalName="search.suggestion-item-content"
            portalProps={
              Object {
                "suggestion": "foo",
              }
            }
          >
            foo
          </SurroundPortals>
        </button>
      </SurroundPortals>
      <SurroundPortals
        key="foo bar"
        portalName="search.suggestion-item"
        portalProps={
          Object {
            "className": "css-crua9x",
            "onClick": [Function],
            "suggestion": "foo bar",
          }
        }
      >
        <button
          className="css-crua9x"
          data-test-id="searchSuggestion foo bar"
          onClick={[Function]}
          type="button"
          value="foo bar"
        >
          <SurroundPortals
            portalName="search.suggestion-item-content"
            portalProps={
              Object {
                "suggestion": "foo bar",
              }
            }
          >
            foo bar
          </SurroundPortals>
        </button>
      </SurroundPortals>
      <SurroundPortals
        key="foo bar buz"
        portalName="search.suggestion-item"
        portalProps={
          Object {
            "className": "css-crua9x",
            "onClick": [Function],
            "suggestion": "foo bar buz",
          }
        }
      >
        <button
          className="css-crua9x"
          data-test-id="searchSuggestion foo bar buz"
          onClick={[Function]}
          type="button"
          value="foo bar buz"
        >
          <SurroundPortals
            portalName="search.suggestion-item-content"
            portalProps={
              Object {
                "suggestion": "foo bar buz",
              }
            }
          >
            foo bar buz
          </SurroundPortals>
        </button>
      </SurroundPortals>
      <SurroundPortals
        key="foo bar buz quz"
        portalName="search.suggestion-item"
        portalProps={
          Object {
            "className": "css-crua9x",
            "onClick": [Function],
            "suggestion": "foo bar buz quz",
          }
        }
      >
        <button
          className="css-crua9x"
          data-test-id="searchSuggestion foo bar buz quz"
          onClick={[Function]}
          type="button"
          value="foo bar buz quz"
        >
          <SurroundPortals
            portalName="search.suggestion-item-content"
            portalProps={
              Object {
                "suggestion": "foo bar buz quz",
              }
            }
          >
            foo bar buz quz
          </SurroundPortals>
        </button>
      </SurroundPortals>
    </div>
  </SurroundPortals>
</SuggestionList>
`;

exports[`<SuggestionList /> should not update while suggestions are fetching 3`] = `
<SuggestionList
  bottomHeight={10}
  fetching={false}
  onClick={[Function]}
  suggestions={
    Array [
      "foo bar buz quz",
      "foo bar buz",
      "foo bar",
      "foo",
    ]
  }
>
  <SurroundPortals
    portalName="search.suggestions"
    portalProps={
      Object {
        "onClick": [Function],
        "suggestions": Array [
          "foo bar buz quz",
          "foo bar buz",
          "foo bar",
          "foo",
        ],
      }
    }
  >
    <div
      className="css-7w6rep css-90ryaa"
    >
      <SurroundPortals
        key="foo bar buz quz"
        portalName="search.suggestion-item"
        portalProps={
          Object {
            "className": "css-crua9x",
            "onClick": [Function],
            "suggestion": "foo bar buz quz",
          }
        }
      >
        <button
          className="css-crua9x"
          data-test-id="searchSuggestion foo bar buz quz"
          onClick={[Function]}
          type="button"
          value="foo bar buz quz"
        >
          <SurroundPortals
            portalName="search.suggestion-item-content"
            portalProps={
              Object {
                "suggestion": "foo bar buz quz",
              }
            }
          >
            foo bar buz quz
          </SurroundPortals>
        </button>
      </SurroundPortals>
      <SurroundPortals
        key="foo bar buz"
        portalName="search.suggestion-item"
        portalProps={
          Object {
            "className": "css-crua9x",
            "onClick": [Function],
            "suggestion": "foo bar buz",
          }
        }
      >
        <button
          className="css-crua9x"
          data-test-id="searchSuggestion foo bar buz"
          onClick={[Function]}
          type="button"
          value="foo bar buz"
        >
          <SurroundPortals
            portalName="search.suggestion-item-content"
            portalProps={
              Object {
                "suggestion": "foo bar buz",
              }
            }
          >
            foo bar buz
          </SurroundPortals>
        </button>
      </SurroundPortals>
      <SurroundPortals
        key="foo bar"
        portalName="search.suggestion-item"
        portalProps={
          Object {
            "className": "css-crua9x",
            "onClick": [Function],
            "suggestion": "foo bar",
          }
        }
      >
        <button
          className="css-crua9x"
          data-test-id="searchSuggestion foo bar"
          onClick={[Function]}
          type="button"
          value="foo bar"
        >
          <SurroundPortals
            portalName="search.suggestion-item-content"
            portalProps={
              Object {
                "suggestion": "foo bar",
              }
            }
          >
            foo bar
          </SurroundPortals>
        </button>
      </SurroundPortals>
      <SurroundPortals
        key="foo"
        portalName="search.suggestion-item"
        portalProps={
          Object {
            "className": "css-crua9x",
            "onClick": [Function],
            "suggestion": "foo",
          }
        }
      >
        <button
          className="css-crua9x"
          data-test-id="searchSuggestion foo"
          onClick={[Function]}
          type="button"
          value="foo"
        >
          <SurroundPortals
            portalName="search.suggestion-item-content"
            portalProps={
              Object {
                "suggestion": "foo",
              }
            }
          >
            foo
          </SurroundPortals>
        </button>
      </SurroundPortals>
    </div>
  </SurroundPortals>
</SuggestionList>
`;

exports[`<SuggestionList /> should render a list of suggestions 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(SuggestionList)
    bottomHeight={10}
    onClick={[Function]}
  >
    <SuggestionList
      bottomHeight={10}
      dispatch={[Function]}
      fetching={false}
      onClick={[Function]}
      suggestions={
        Array [
          "foo",
          "foo bar",
          "foo bar buz",
          "foo bar buz quz",
        ]
      }
    >
      <SurroundPortals
        portalName="search.suggestions"
        portalProps={
          Object {
            "onClick": [Function],
            "suggestions": Array [
              "foo",
              "foo bar",
              "foo bar buz",
              "foo bar buz quz",
            ],
          }
        }
      >
        <div
          className="css-7w6rep css-90ryaa"
        >
          <SurroundPortals
            key="foo"
            portalName="search.suggestion-item"
            portalProps={
              Object {
                "className": "css-crua9x",
                "onClick": [Function],
                "suggestion": "foo",
              }
            }
          >
            <button
              className="css-crua9x"
              data-test-id="searchSuggestion foo"
              onClick={[Function]}
              type="button"
              value="foo"
            >
              <SurroundPortals
                portalName="search.suggestion-item-content"
                portalProps={
                  Object {
                    "suggestion": "foo",
                  }
                }
              >
                foo
              </SurroundPortals>
            </button>
          </SurroundPortals>
          <SurroundPortals
            key="foo bar"
            portalName="search.suggestion-item"
            portalProps={
              Object {
                "className": "css-crua9x",
                "onClick": [Function],
                "suggestion": "foo bar",
              }
            }
          >
            <button
              className="css-crua9x"
              data-test-id="searchSuggestion foo bar"
              onClick={[Function]}
              type="button"
              value="foo bar"
            >
              <SurroundPortals
                portalName="search.suggestion-item-content"
                portalProps={
                  Object {
                    "suggestion": "foo bar",
                  }
                }
              >
                foo bar
              </SurroundPortals>
            </button>
          </SurroundPortals>
          <SurroundPortals
            key="foo bar buz"
            portalName="search.suggestion-item"
            portalProps={
              Object {
                "className": "css-crua9x",
                "onClick": [Function],
                "suggestion": "foo bar buz",
              }
            }
          >
            <button
              className="css-crua9x"
              data-test-id="searchSuggestion foo bar buz"
              onClick={[Function]}
              type="button"
              value="foo bar buz"
            >
              <SurroundPortals
                portalName="search.suggestion-item-content"
                portalProps={
                  Object {
                    "suggestion": "foo bar buz",
                  }
                }
              >
                foo bar buz
              </SurroundPortals>
            </button>
          </SurroundPortals>
          <SurroundPortals
            key="foo bar buz quz"
            portalName="search.suggestion-item"
            portalProps={
              Object {
                "className": "css-crua9x",
                "onClick": [Function],
                "suggestion": "foo bar buz quz",
              }
            }
          >
            <button
              className="css-crua9x"
              data-test-id="searchSuggestion foo bar buz quz"
              onClick={[Function]}
              type="button"
              value="foo bar buz quz"
            >
              <SurroundPortals
                portalName="search.suggestion-item-content"
                portalProps={
                  Object {
                    "suggestion": "foo bar buz quz",
                  }
                }
              >
                foo bar buz quz
              </SurroundPortals>
            </button>
          </SurroundPortals>
        </div>
      </SurroundPortals>
    </SuggestionList>
  </Connect(SuggestionList)>
</Provider>
`;
